fix: prevent form preview clipping

--- a/src/FormBuilder/resources/js/form-builder/src/styles/_block-editor.scss
+++ b/src/FormBuilder/resources/js/form-builder/src/styles/_block-editor.scss
@@ -35,7 +35,7 @@
 
 .interface-interface-skeleton__content {
     width: 720px;
-    margin: 0 auto;
+    margin: auto;
     padding: 100px 0; /* Leave room for toolbar above first block. */
     flex-grow: unset;
     box-sizing: border-box;
